# tradeX

./: .editorconfig  .env.example  .gitignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  commitlint.config.js  package.json  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.changeset/: README.md  config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-vm.yml
.husky/: pre-commit
apps/api/: README.md  package.json
apps/marketing/: README.md  package.json
apps/web/: README.md  package.json
apps/web-admin/: README.md  package.json
apps/workers/executor/: README.md  pyproject.toml
apps/workers/ingestion/: README.md  pyproject.toml
apps/workers/paper-engine/: README.md  pyproject.toml
apps/workers/parser/: README.md  pyproject.toml
apps/workers/reporter/: README.md  pyproject.toml
apps/workers/scheduler/: README.md  pyproject.toml
demo/: README.md
demo/infra/: README.md  bootstrap-secrets.sh  bootstrap-vm.sh  deploy.sh  push.ps1  push.sh
demo/infra/systemd/: tradex-web.service  tradex-worker.service
demo/qa/: README.md  package-lock.json  package.json  run.ts  tsconfig.json
demo/qa/lib/: check.ts  db.ts  http.ts  report.ts
demo/qa/phases/: m0_1.ts  m0_2.ts  m0_3.ts  m0_5.ts  m0_6.ts  trade_slips.ts
demo/qa/reports/: m0.1.md  m0.2.md  m0.3.md  m0.5.md  m0.6.md  trade-slips.md
demo/web/: middleware.ts  next.config.ts  package-lock.json  package.json
demo/web/app/: globals.css  layout.tsx  providers.tsx
demo/web/app/(app)/: actions.ts  layout.tsx  page.tsx
demo/web/app/(app)/channels/: page.tsx
demo/web/app/(app)/connections/: page.tsx
demo/web/app/(app)/market/: page.tsx
demo/web/app/(app)/portfolio/: page.tsx
demo/web/app/(app)/scorecard/: page.tsx
demo/web/app/(app)/trading-floor/: page.tsx
demo/web/app/admin/: layout.tsx  page.tsx
demo/web/app/admin/channels/: actions.ts  page.tsx
demo/web/app/admin/settings/: page.tsx
demo/web/app/admin/telegram/: page.tsx
demo/web/app/api/accounts/: route.ts
demo/web/app/api/channels-count/: route.ts
demo/web/app/api/dashboard/: route.ts
demo/web/app/api/market/: route.ts
demo/web/app/api/service/: route.ts
demo/web/app/login/: actions.ts  page.tsx
demo/web/app/onboarding/: layout.tsx
demo/web/app/signup/: actions.ts  page.tsx  signup-form.tsx
demo/web/components/: account-strip.tsx  active-channels.tsx  activity-feed.tsx  channels-empty-states.tsx  connect-channels-cta.tsx  dashboard-next-action.tsx  dashboard-workspace-links.tsx  featured-symbol.tsx  market-grid.tsx  market-status.tsx  mission-status-strip.tsx  onboarding-progress.tsx  paper-banner.tsx  pipeline-diagram.tsx  portfolio-card.tsx  portfolio-view.tsx  service-status-indicator.tsx  sidebar.tsx  star-rating.tsx  symbol-detail-card.tsx  today-summary.tsx  topbar.tsx  trade-slips-view.tsx  trading-floor-view.tsx  trading-service-card.tsx
demo/web/lib/: auth.ts  crypto.ts  dashboard-guidance.ts  market-hours.ts  python.ts  symbols.ts  utils.ts
demo/web/lib/services/: auth.ts  onboarding.ts
demo/web/prisma/: schema.prisma
demo/web/scripts/: upsert-admin.mjs
demo/worker/: auth.py  costs.py  db.py  llm_parser.py  main.py  parser.py  requirements.txt
docs/: DEPLOYMENT.md  LEARNINGS_FROM_LEGACY.md  PRODUCT_SPEC.md  ROADMAP.md  SOLUTION_ARCHITECTURE.md
docs/architecture/adr/: README.md
docs/runbooks/: README.md
infra/: README.md
infra/docker/: api.Dockerfile  docker-compose.dev.yml  web.Dockerfile  worker.Dockerfile
infra/terraform/environments/prod/: main.tf
scripts/: README.md  validate-local.ps1
services/clickhouse/ddl/: 0001_init.sql
services/postgres/migrations/: 0001_init.sql
services/temporal/: README.md
tests/contract/: README.md
tests/e2e/: README.md  package.json
tests/load/: README.md
(+20 files in other folders)
