[project]
name = "tradex-executor"
version = "0.0.1"
description = "tradeX — live trade execution via broker adapters"
requires-python = ">=3.12"
dependencies = [
    "kiteconnect>=5.0",
    "redis>=5.0",
    "asyncpg>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "temporalio>=1.8",
    "ddtrace>=2.15",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.6", "mypy>=1.11"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
