[project]
name = "tradex-ingestion"
version = "0.0.1"
description = "tradeX — Telegram ingestion worker (per-user sessions)"
requires-python = ">=3.12"
dependencies = [
    "telethon>=1.34.0",
    "aiofiles>=24.0",
    "redis>=5.0",
    "asyncpg>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "ddtrace>=2.15",
    "sentry-sdk>=2.15",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "black>=24.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
