[project]
name = "tradex-parser"
version = "0.0.1"
description = "tradeX — LLM-based signal parser with multi-message collation"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.50",
    "redis>=5.0",
    "asyncpg>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "ddtrace>=2.15",
    "sentry-sdk>=2.15",
    "aiofiles>=24.0",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "black>=24.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
